<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bmi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/bmiGreeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmiGreeting"
            android:textAlignment="center"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/height"
                    android:inputType="textPersonName"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/weight"
                    android:inputType="textPersonName"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/bmiSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <TextView
                    android:id="@+id/bmiAnswer1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/bmiAnswer1"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/bmiAnswer2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/bmiAnswer2"
                    android:inputType="textPersonName"
                    android:textAlignment="center" />

            </LinearLayout>

            <EditText
                android:id="@+id/bmiTextAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bmiTextAnswer"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/previous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/previous" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>