<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="210dp"
            android:layout_height="90dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            android:text="@string/greeting"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmiButton" />

        <Button
            android:id="@+id/calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>